[package]
name = "GitLikeVCS"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.3.0"                                                    # helps wrap responses from reqwest
clap = { version = "4.0.32", features = ["derive"]}                # cli tools
flate2 = "1.0"                                                     # gzip (de)compression
anyhow = "1.0.59"                                                  # error handling
sha1 = "0.10.1"                                                    # hashing
hex = "0.4.3"                                                      # working with hash output